﻿syntax = "proto3";

option csharp_namespace = "MovieService";

service GrpcMovie {
    rpc GetMovie (GetMovieRequest) returns (GrpcMovieResponse);
}

message GetMovieRequest {
    string id = 1;
}

message GrpcMovieModel {
    string id = 1;
    string title = 2;
    string description = 3;
    int32 durationMinutes = 4;
    string posterUrl = 5;
    string publicId = 6;
    repeated string genres = 7;
}

message GrpcMovieResponse {
    GrpcMovieModel auction = 1;
}